--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -68,7 +68,17 @@
             </div>
         </aside>
         <main class="main-content">
-            {{ block "main" . }}{{ end }}
+            <div class="content-wrapper">
+                {{ block "main" . }}{{ end }}
+            </div>
+            <aside class="quick-nav" id="quick-nav">
+                <div class="quick-nav-header">
+                    <h3>목차</h3>
+                </div>
+                <nav class="quick-nav-content" id="quick-nav-content">
+                    <!-- JavaScript로 동적 생성 -->
+                </nav>
+            </aside>
         </main>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-core.min.js"></script>
